--- a/crud-angular/src/app/courses/courses/courses.component.html
+++ b/crud-angular/src/app/courses/courses/courses.component.html
@@ -1,1 +1,23 @@
-<p>courses works!</p>
+<mat-card>
+  <mat-card-content>
+      <mat-toolbar color="primary">Cursos disponíveis</mat-toolbar>
+
+<table mat-table [dataSource]="courses" class="mat-elevation-z8">
+
+  <!-- name Column -->
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef> <b>Curso</b> </th>
+    <td mat-cell *matCellDef="let course"> {{ course.name }} </td>
+  </ng-container>
+
+  <!-- category Column -->
+  <ng-container matColumnDef="category">
+    <th mat-header-cell *matHeaderCellDef> <b>Categoria</b> </th>
+    <td mat-cell *matCellDef="let course"> {{ course.category }} </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+  </mat-card-content>
+</mat-card>
