--- a/crud-angular/src/app/courses/courses/courses.component.html
+++ b/crud-angular/src/app/courses/courses/courses.component.html
@@ -1,23 +1,30 @@
 <mat-card>
   <mat-card-content>
-      <mat-toolbar color="primary">Cursos disponíveis</mat-toolbar>
+    <mat-toolbar color="primary">Cursos disponíveis</mat-toolbar>
+    <div *ngIf="courses$ | async as courses; else loading">
+      <table mat-table [dataSource]="courses" class="mat-elevation-z8">
+        <!-- name Column -->
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef><b>Curso</b></th>
+          <td mat-cell *matCellDef="let course">{{ course.name }}</td>
+        </ng-container>
 
-<table mat-table [dataSource]="courses" class="mat-elevation-z8">
+        <!-- category Column -->
+        <ng-container matColumnDef="category">
+          <th mat-header-cell *matHeaderCellDef><b>Categoria</b></th>
+          <td mat-cell *matCellDef="let course">{{ course.category }}</td>
+        </ng-container>
 
-  <!-- name Column -->
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef> <b>Curso</b> </th>
-    <td mat-cell *matCellDef="let course"> {{ course.name }} </td>
-  </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+    </div>
 
-  <!-- category Column -->
-  <ng-container matColumnDef="category">
-    <th mat-header-cell *matHeaderCellDef> <b>Categoria</b> </th>
-    <td mat-cell *matCellDef="let course"> {{ course.category }} </td>
-  </ng-container>
+    <ng-template #loading>
+      <div class="loading-spiner">
+        <mat-spinner></mat-spinner>
+      </div>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+    </ng-template>
   </mat-card-content>
 </mat-card>
